--- a/Expression.tex
+++ b/Expression.tex
@@ -5,7 +5,7 @@
 \usepackage[utf8]{inputenc}
 
 \begin{document}
-	$\left(\frac{12*x}{(12-x)}\right)'$
-	$= \frac{((0*x+12*1)*(12-x)-12*x*(0-1))}{(12-x)*(12-x)}$
+	$\left(\frac{12.000000*x}{(12.000000-x)}\right)'$
+	$= \frac{((0.000000*x+12.000000)*(12.000000-x)-12.000000*x*-1.000000)}{(12.000000-x)*(12.000000-x)}$
 
 \end{document}
