--- a/Expression.tex
+++ b/Expression.tex
@@ -6,6 +6,6 @@
 
 \begin{document}
 	$\left(\frac{12.000000*x}{(12.000000-x)}\right)'$
-	$= \frac{((0.000000*x+12.000000)*(12.000000-x)-12.000000*x*-1.000000)}{(12.000000-x)*(12.000000-x)}$
+	$= \frac{(12.000000*(12.000000-x)-12.000000*x*-1.000000)}{(12.000000-x)*(12.000000-x)}$
 
 \end{document}
