--- a/Expression.tex
+++ b/Expression.tex
@@ -5,7 +5,7 @@
 \usepackage[utf8]{inputenc}
 
 \begin{document}
-	$\left(\frac{12.000000*x}{(12.000000-x)}\right)'$
-	$= \frac{(12.000000*(12.000000-x)-12.000000*x*-1.000000)}{(12.000000-x)*(12.000000-x)}$
+	$\left(x*x*x*x*x*x*x*x\right)'$
+	$= (((x+x)*x*x+x*x*(x+x))*x*x*x*x+x*x*x*x*((x+x)*x*x+x*x*(x+x)))$
 
 \end{document}
