--- a/Expression.tex
+++ b/Expression.tex
@@ -5,7 +5,7 @@
 \usepackage[utf8]{inputenc}
 
 \begin{document}
-	$\left(x*x*x*x*x*x*x*x\right)'$
-	$= (((x+x)*x*x+x*x*(x+x))*x*x*x*x+x*x*x*x*((x+x)*x*x+x*x*(x+x)))$
+	$\left(((x*\left(2.000000\right))^{\left(4.000000\right)})\right)'$
+	$= ((\left(4.000000\right)*((x*\left(2.000000\right))^{\left(3.000000\right)}))*\left(2.000000\right))$
 
 \end{document}
