--- a/Expression.tex
+++ b/Expression.tex
@@ -5,7 +5,7 @@
 \usepackage[utf8]{inputenc}
 
 \begin{document}
-	$\left((\left(2.000000\right)-\left(80.000000\right))\right)'$
-	$= \left(0.000000\right)$
+	$\left((x*(\left(2.000000\right)^{(x*\left(34.000000\right))}))\right)'$
+	$= ((\left(2.000000\right)^{(x*\left(34.000000\right))})+(x*(((\left(2.000000\right)^{(x*\left(34.000000\right))})*ln{\left(2.000000\right)})*\left(34.000000\right))))$
 
 \end{document}
