debug differential of degree, debug some leaks

--- a/Expression.tex
+++ b/Expression.tex
@@ -5,7 +5,7 @@
 \usepackage[utf8]{inputenc}
 
 \begin{document}
-	$\left((x*(\left(2.000000\right)^{(x*\left(34.000000\right))}))\right)'$
-	$= ((\left(2.000000\right)^{(x*\left(34.000000\right))})+(x*(((\left(2.000000\right)^{(x*\left(34.000000\right))})*ln{\left(2.000000\right)})*\left(34.000000\right))))$
+	$\left((x^{((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})})\right)'$
+	$= ((x^{((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})})*((\frac{\left(1.000000\right)}{x}*((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x}))+(ln{x}*(((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{(((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})}*((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})}*(((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{(((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})}*((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{((((((x^{x})^{x})^{x})^{x})^{x})^{x})}*(((((((x^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{(((((x^{x})^{x})^{x})^{x})^{x})}*((((((x^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{((((x^{x})^{x})^{x})^{x})}*(((((x^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{(((x^{x})^{x})^{x})}*((((x^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{((x^{x})^{x})}*(((x^{x})^{x})*(((\frac{\left(1.000000\right)}{(x^{x})}*((x^{x})*((\frac{\left(1.000000\right)}{x}*x)+ln{x})))*x)+ln{(x^{x})})))*x)+ln{((x^{x})^{x})})))*x)+ln{(((x^{x})^{x})^{x})})))*x)+ln{((((x^{x})^{x})^{x})^{x})})))*x)+ln{(((((x^{x})^{x})^{x})^{x})^{x})})))*x)+ln{((((((x^{x})^{x})^{x})^{x})^{x})^{x})})))*x)+ln{(((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})})))*x)+ln{((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})})))*x)+ln{(((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})})))))$
 
 \end{document}
