work with LaTex upgrade

--- a/Expression.tex
+++ b/Expression.tex
@@ -5,6 +5,12 @@
 \usepackage[utf8]{inputenc}
 
 \begin{document}
+	\begin{center}
+	ЛАБОРАТОРНАЯ РАБОТА 3.3.3
+
+	Решение задачи тысячелетия
+	\end{center}
+	\newpage
 	$\left((x^{((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})})\right)'$
 	$= ((x^{((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})})*((\frac{\left(1.000000\right)}{x}*((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x}))+(ln{x}*(((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{(((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})}*((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})}*(((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{(((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})}*((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{((((((x^{x})^{x})^{x})^{x})^{x})^{x})}*(((((((x^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{(((((x^{x})^{x})^{x})^{x})^{x})}*((((((x^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{((((x^{x})^{x})^{x})^{x})}*(((((x^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{(((x^{x})^{x})^{x})}*((((x^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{((x^{x})^{x})}*(((x^{x})^{x})*(((\frac{\left(1.000000\right)}{(x^{x})}*((x^{x})*((\frac{\left(1.000000\right)}{x}*x)+ln{x})))*x)+ln{(x^{x})})))*x)+ln{((x^{x})^{x})})))*x)+ln{(((x^{x})^{x})^{x})})))*x)+ln{((((x^{x})^{x})^{x})^{x})})))*x)+ln{(((((x^{x})^{x})^{x})^{x})^{x})})))*x)+ln{((((((x^{x})^{x})^{x})^{x})^{x})^{x})})))*x)+ln{(((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})})))*x)+ln{((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})})))*x)+ln{(((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})})))))$
 
