srart to make writer to LaTex for process diffirentiation

--- a/Expression.tex
+++ b/Expression.tex
@@ -11,7 +11,7 @@
 	Решение задачи тысячелетия
 	\end{center}
 	\newpage
-	$\left((x^{((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})})\right)'$
-	$= ((x^{((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})})*((\frac{\left(1.000000\right)}{x}*((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x}))+(ln{x}*(((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{(((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})}*((((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})}*(((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{(((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})}*((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{((((((x^{x})^{x})^{x})^{x})^{x})^{x})}*(((((((x^{x})^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{(((((x^{x})^{x})^{x})^{x})^{x})}*((((((x^{x})^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{((((x^{x})^{x})^{x})^{x})}*(((((x^{x})^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{(((x^{x})^{x})^{x})}*((((x^{x})^{x})^{x})*(((\frac{\left(1.000000\right)}{((x^{x})^{x})}*(((x^{x})^{x})*(((\frac{\left(1.000000\right)}{(x^{x})}*((x^{x})*((\frac{\left(1.000000\right)}{x}*x)+ln{x})))*x)+ln{(x^{x})})))*x)+ln{((x^{x})^{x})})))*x)+ln{(((x^{x})^{x})^{x})})))*x)+ln{((((x^{x})^{x})^{x})^{x})})))*x)+ln{(((((x^{x})^{x})^{x})^{x})^{x})})))*x)+ln{((((((x^{x})^{x})^{x})^{x})^{x})^{x})})))*x)+ln{(((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})})))*x)+ln{((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})})))*x)+ln{(((((((((x^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})^{x})})))))$
+	$\left((\left(2.000000\right)^{(\left(2.000000\right)*x)})\right)'$
+	$= ((\left(2.000000\right)^{(\left(2.000000\right)*x)})*\left(1.386294\right))$
 
 \end{document}
