Homework third classes schools student, + write all stages of differentiation, but simplify and comments i dont write now

--- a/Expression.tex
+++ b/Expression.tex
@@ -3,15 +3,35 @@
 \usepackage[english, russian]{babel}
 \usepackage[T2A]{fontenc}
 \usepackage[utf8]{inputenc}
+\usepackage{geometry}
 
-\begin{document}
-	\begin{center}
-	ЛАБОРАТОРНАЯ РАБОТА 3.3.3
+\geometry{top=4ex}
+\geometry{bottom=4ex}
+\geometry{left=5em}
+\geometry{right=5em}
 
-	Решение задачи тысячелетия
-	\end{center}
-	\newpage
-	$\left((\left(2.000000\right)^{(\left(2.000000\right)*x)})\right)'$
-	$= ((\left(2.000000\right)^{(\left(2.000000\right)*x)})*\left(1.386294\right))$
+\author{Муратов Артём}
+\date{3Б класс}
+\title{Домашняя работа}
+\maketitle
+
+№9(1) Вычислить:	\[\left((\left(2.000000\right)^{(\left(2.000000\right)*x)})\right)'
+
+
+Решение:
+	\[\left(x\right)'
+	= \left(1.000000\right)\]
+	\[\left(\left(2.000000\right)\right)'
+	= \left(0.000000\right)\]
+	\[\left((\left(2.000000\right)*x)\right)'
+	= ((\left(0.000000\right)*x)+(\left(2.000000\right)*\left(1.000000\right)))\]
+	\[\left(ln{\left(2.000000\right)}\right)'
+	= \left(0.000000\right)\]
+	\[\left((ln{\left(2.000000\right)}*(\left(2.000000\right)*x))\right)'
+	= ((\left(0.000000\right)*(\left(2.000000\right)*x))+(ln{\left(2.000000\right)}*((\left(0.000000\right)*x)+(\left(2.000000\right)*\left(1.000000\right)))))\]
+	\[\left((\left(2.000000\right)^{(\left(2.000000\right)*x)})\right)'
+	= ((\left(2.000000\right)^{(\left(2.000000\right)*x)})*((\left(0.000000\right)*(\left(2.000000\right)*x))+(ln{\left(2.000000\right)}*((\left(0.000000\right)*x)+(\left(2.000000\right)*\left(1.000000\right))))))\]
+	\[\left((\left(2.000000\right)^{(\left(2.000000\right)*x)})\right)'
+	= ((\left(2.000000\right)^{(\left(2.000000\right)*x)})*\left(1.386294\right))\]
 
 \end{document}
