Good homework may be

--- a/Expression.tex
+++ b/Expression.tex
@@ -15,23 +15,32 @@
 \title{Домашняя работа}
 \maketitle
 
-№9(1) Вычислить:	\[\left((\left(2.000000\right)^{(\left(2.000000\right)*x)})\right)'
+№9(1) Вычислить:	\[\left((\left(2\right)^{(\left(2\right)*x)})\right)'
+\]
 
 
 Решение:
+
+Очевидно,
 	\[\left(x\right)'
-	= \left(1.000000\right)\]
-	\[\left(\left(2.000000\right)\right)'
-	= \left(0.000000\right)\]
-	\[\left((\left(2.000000\right)*x)\right)'
-	= ((\left(0.000000\right)*x)+(\left(2.000000\right)*\left(1.000000\right)))\]
-	\[\left(ln{\left(2.000000\right)}\right)'
-	= \left(0.000000\right)\]
-	\[\left((ln{\left(2.000000\right)}*(\left(2.000000\right)*x))\right)'
-	= ((\left(0.000000\right)*(\left(2.000000\right)*x))+(ln{\left(2.000000\right)}*((\left(0.000000\right)*x)+(\left(2.000000\right)*\left(1.000000\right)))))\]
-	\[\left((\left(2.000000\right)^{(\left(2.000000\right)*x)})\right)'
-	= ((\left(2.000000\right)^{(\left(2.000000\right)*x)})*((\left(0.000000\right)*(\left(2.000000\right)*x))+(ln{\left(2.000000\right)}*((\left(0.000000\right)*x)+(\left(2.000000\right)*\left(1.000000\right))))))\]
-	\[\left((\left(2.000000\right)^{(\left(2.000000\right)*x)})\right)'
-	= ((\left(2.000000\right)^{(\left(2.000000\right)*x)})*\left(1.386294\right))\]
+	= \left(1\right)\]
+Пока примем без доказательства, что:
+	\[\left(\left(2\right)\right)'
+	= \left(0\right)\]
+Заметим, что:
+	\[\left((\left(2\right)*x)\right)'
+	= ((\left(0\right)*x)+(\left(2\right)*\left(1\right)))\]
+Пока примем без доказательства, что:
+	\[\left(ln{\left(2\right)}\right)'
+	= \left(0\right)\]
+Заметим, что:
+	\[\left((ln{\left(2\right)}*(\left(2\right)*x))\right)'
+	= ((\left(0\right)*(\left(2\right)*x))+(ln{\left(2\right)}*((\left(0\right)*x)+(\left(2\right)*\left(1\right)))))\]
+После простых преобразований:
+	\[\left((\left(2\right)^{(\left(2\right)*x)})\right)'
+	= ((\left(2\right)^{(\left(2\right)*x)})*((\left(0\right)*(\left(2\right)*x))+(ln{\left(2\right)}*((\left(0\right)*x)+(\left(2\right)*\left(1\right))))))\]
+Упростив выражение получаем ответ:
+	\[\left((\left(2\right)^{(\left(2\right)*x)})\right)'
+	= ((\left(2\right)^{(\left(2\right)*x)})*\left(1.38629\right))\]
 
 \end{document}
