* -> \cdot in MUL LaTex

--- a/Expression.tex
+++ b/Expression.tex
@@ -15,7 +15,7 @@
 \title{Домашняя работа}
 \maketitle
 
-№9(1) Вычислить:	\[\left((\left(2\right)^{(\left(2\right)*x)})\right)'
+№9(1) Вычислить:	\[\left((\left(2\right)^{(\left(2\right){\cdot}x)})\right)'
 \]
 
 
@@ -28,19 +28,19 @@
 	\[\left(\left(2\right)\right)'
 	= \left(0\right)\]
 Заметим, что:
-	\[\left((\left(2\right)*x)\right)'
-	= ((\left(0\right)*x)+(\left(2\right)*\left(1\right)))\]
+	\[\left((\left(2\right){\cdot}x)\right)'
+	= ((\left(0\right){\cdot}x)+(\left(2\right){\cdot}\left(1\right)))\]
 Пока примем без доказательства, что:
 	\[\left(ln{\left(2\right)}\right)'
 	= \left(0\right)\]
 Заметим, что:
-	\[\left((ln{\left(2\right)}*(\left(2\right)*x))\right)'
-	= ((\left(0\right)*(\left(2\right)*x))+(ln{\left(2\right)}*((\left(0\right)*x)+(\left(2\right)*\left(1\right)))))\]
+	\[\left((ln{\left(2\right)}{\cdot}(\left(2\right){\cdot}x))\right)'
+	= ((\left(0\right){\cdot}(\left(2\right){\cdot}x))+(ln{\left(2\right)}{\cdot}((\left(0\right){\cdot}x)+(\left(2\right){\cdot}\left(1\right)))))\]
 После простых преобразований:
-	\[\left((\left(2\right)^{(\left(2\right)*x)})\right)'
-	= ((\left(2\right)^{(\left(2\right)*x)})*((\left(0\right)*(\left(2\right)*x))+(ln{\left(2\right)}*((\left(0\right)*x)+(\left(2\right)*\left(1\right))))))\]
+	\[\left((\left(2\right)^{(\left(2\right){\cdot}x)})\right)'
+	= ((\left(2\right)^{(\left(2\right){\cdot}x)}){\cdot}((\left(0\right){\cdot}(\left(2\right){\cdot}x))+(ln{\left(2\right)}{\cdot}((\left(0\right){\cdot}x)+(\left(2\right){\cdot}\left(1\right))))))\]
 Упростив выражение получаем ответ:
-	\[\left((\left(2\right)^{(\left(2\right)*x)})\right)'
-	= ((\left(2\right)^{(\left(2\right)*x)})*\left(1.38629\right))\]
+	\[\left((\left(2\right)^{(\left(2\right){\cdot}x)})\right)'
+	= ((\left(2\right)^{(\left(2\right){\cdot}x)}){\cdot}\left(1.38629\right))\]
 
 \end{document}
