debug func IsNotConstExpression

--- a/Expression.tex
+++ b/Expression.tex
@@ -15,7 +15,7 @@
 \title{Домашняя работа}
 \maketitle
 
-№9(1) Вычислить:	\[\left((\left(2\right)^{(\left(2\right){\cdot}x)})\right)'
+№9(1) Вычислить:	\[\left(sin{(x^{x})}\right)'
 \]
 
 
@@ -24,23 +24,23 @@
 Очевидно,
 	\[\left(x\right)'
 	= \left(1\right)\]
-Пока примем без доказательства, что:
-	\[\left(\left(2\right)\right)'
-	= \left(0\right)\]
+Очевидно,
+	\[\left(x\right)'
+	= \left(1\right)\]
+По табличке из задачника Кудрявцева находим
+	\[\left(ln{x}\right)'
+	= (\frac{\left(1\right)}{x}{\cdot}\left(1\right))\]
 Заметим, что:
-	\[\left((\left(2\right){\cdot}x)\right)'
-	= ((\left(0\right){\cdot}x)+(\left(2\right){\cdot}\left(1\right)))\]
-Пока примем без доказательства, что:
-	\[\left(ln{\left(2\right)}\right)'
-	= \left(0\right)\]
-Заметим, что:
-	\[\left((ln{\left(2\right)}{\cdot}(\left(2\right){\cdot}x))\right)'
-	= ((\left(0\right){\cdot}(\left(2\right){\cdot}x))+(ln{\left(2\right)}{\cdot}((\left(0\right){\cdot}x)+(\left(2\right){\cdot}\left(1\right)))))\]
+	\[\left((ln{x}{\cdot}x)\right)'
+	= (((\frac{\left(1\right)}{x}{\cdot}\left(1\right)){\cdot}x)+(ln{x}{\cdot}\left(1\right)))\]
 После простых преобразований:
-	\[\left((\left(2\right)^{(\left(2\right){\cdot}x)})\right)'
-	= ((\left(2\right)^{(\left(2\right){\cdot}x)}){\cdot}((\left(0\right){\cdot}(\left(2\right){\cdot}x))+(ln{\left(2\right)}{\cdot}((\left(0\right){\cdot}x)+(\left(2\right){\cdot}\left(1\right))))))\]
+	\[\left((x^{x})\right)'
+	= ((x^{x}){\cdot}(((\frac{\left(1\right)}{x}{\cdot}\left(1\right)){\cdot}x)+(ln{x}{\cdot}\left(1\right))))\]
+Ещё более очевидно
+	\[\left(sin{(x^{x})}\right)'
+	= (cos{(x^{x})}{\cdot}((x^{x}){\cdot}(((\frac{\left(1\right)}{x}{\cdot}\left(1\right)){\cdot}x)+(ln{x}{\cdot}\left(1\right)))))\]
 Упростив выражение получаем ответ:
-	\[\left((\left(2\right)^{(\left(2\right){\cdot}x)})\right)'
-	= ((\left(2\right)^{(\left(2\right){\cdot}x)}){\cdot}\left(1.38629\right))\]
+	\[\left(sin{(x^{x})}\right)'
+	= (cos{(x^{x})}{\cdot}((x^{x}){\cdot}((\frac{\left(1\right)}{x}{\cdot}x)+ln{x})))\]
 
 \end{document}
