tested with artificial intelligence

--- a/Expression.tex
+++ b/Expression.tex
@@ -27,7 +27,7 @@
 Очевидно,
 	\[\left(x\right)'
 	= \left(1\right)\]
-По табличке из задачника Кудрявцева находим
+В курсе аналитической геометрии вам доказывали, что:
 	\[\left(ln{x}\right)'
 	= (\frac{\left(1\right)}{x}{\cdot}\left(1\right))\]
 Заметим, что:
