commit with errors of TEX

--- a/Expression.tex
+++ b/Expression.tex
@@ -15,32 +15,71 @@
 \title{Домашняя работа}
 \maketitle
 
-№9(1) Вычислить:	\[\left(sin{(x^{x})}\right)'
+№9(1) Вычислить:	$\left((sin{(\15\{\cdot}(x^{\3\}))}+(cos{((\20\{\cdot}x)+\4\)}^{\3\}))\right)'$
 \]
 
 
 Решение:
 
+Пока примем без доказательства, что:
+	$\left(\3\\right)'$
+	$\left(\0\$
+Пока примем без доказательства, что:
+	$\left(\4\\right)'$
+	$\left(\0\$
 Очевидно,
-	\[\left(x\right)'
-	= \left(1\right)\]
-Очевидно,
-	\[\left(x\right)'
-	= \left(1\right)\]
-В курсе аналитической геометрии вам доказывали, что:
-	\[\left(ln{x}\right)'
-	= (\frac{\left(1\right)}{x}{\cdot}\left(1\right))\]
+	$\left(x\right)'$
+	$\left(\1\$
+Пока примем без доказательства, что:
+	$\left(\20\\right)'$
+	$\left(\0\$
 Заметим, что:
-	\[\left((ln{x}{\cdot}x)\right)'
-	= (((\frac{\left(1\right)}{x}{\cdot}\left(1\right)){\cdot}x)+(ln{x}{\cdot}\left(1\right)))\]
+	$\left((\20\{\cdot}x)\right)'$
+	$\left(((\0\{\cdot}x)+(\20\{\cdot}\1\))$
+На уроке рисования вам докажут, что:
+	$\left(((\20\{\cdot}x)+\4\)\right)'$
+	$\left((((\0\{\cdot}x)+(\20\{\cdot}\1\))+\0\)$
+Перейдя в комплексное поле и обратно, получим
+	$\left(cos{((\20\{\cdot}x)+\4\)}\right)'$
+	$\left((sin{((\20\{\cdot}x)+\4\)}{\cdot}(((\0\{\cdot}x)+(\20\{\cdot}\1\))+\0\))$
+В курсе аналитической геометрии вам доказывали, что:
+	$\left(ln{cos{((\20\{\cdot}x)+\4\)}}\right)'$
+	$\left((\frac{\1\}{cos{((\20\{\cdot}x)+\4\)}}{\cdot}(sin{((\20\{\cdot}x)+\4\)}{\cdot}(((\0\{\cdot}x)+(\20\{\cdot}\1\))+\0\)))$
+Заметим, что:
+	$\left((ln{cos{((\20\{\cdot}x)+\4\)}}{\cdot}\3\)\right)'$
+	$\left((((\frac{\1\}{cos{((\20\{\cdot}x)+\4\)}}{\cdot}(sin{((\20\{\cdot}x)+\4\)}{\cdot}(((\0\{\cdot}x)+(\20\{\cdot}\1\))+\0\))){\cdot}\3\)+(ln{cos{((\20\{\cdot}x)+\4\)}}{\cdot}\0\))$
 После простых преобразований:
-	\[\left((x^{x})\right)'
-	= ((x^{x}){\cdot}(((\frac{\left(1\right)}{x}{\cdot}\left(1\right)){\cdot}x)+(ln{x}{\cdot}\left(1\right))))\]
+	$\left((cos{((\20\{\cdot}x)+\4\)}^{\3\})\right)'$
+	$\left(((cos{((\20\{\cdot}x)+\4\)}^{\3\}){\cdot}(((\frac{\1\}{cos{((\20\{\cdot}x)+\4\)}}{\cdot}(sin{((\20\{\cdot}x)+\4\)}{\cdot}(((\0\{\cdot}x)+(\20\{\cdot}\1\))+\0\))){\cdot}\3\)+(ln{cos{((\20\{\cdot}x)+\4\)}}{\cdot}\0\)))$
+Пока примем без доказательства, что:
+	$\left(\3\\right)'$
+	$\left(\0\$
+Очевидно,
+	$\left(x\right)'$
+	$\left(\1\$
+В курсе аналитической геометрии вам доказывали, что:
+	$\left(ln{x}\right)'$
+	$\left((\frac{\1\}{x}{\cdot}\1\)$
+Заметим, что:
+	$\left((ln{x}{\cdot}\3\)\right)'$
+	$\left((((\frac{\1\}{x}{\cdot}\1\){\cdot}\3\)+(ln{x}{\cdot}\0\))$
+После простых преобразований:
+	$\left((x^{\3\})\right)'$
+	$\left(((x^{\3\}){\cdot}(((\frac{\1\}{x}{\cdot}\1\){\cdot}\3\)+(ln{x}{\cdot}\0\)))$
+Пока примем без доказательства, что:
+	$\left(\15\\right)'$
+	$\left(\0\$
+Заметим, что:
+	$\left((\15\{\cdot}(x^{\3\}))\right)'$
+	$\left(((\0\{\cdot}(x^{\3\}))+(\15\{\cdot}((x^{\3\}){\cdot}(((\frac{\1\}{x}{\cdot}\1\){\cdot}\3\)+(ln{x}{\cdot}\0\)))))$
 Ещё более очевидно
-	\[\left(sin{(x^{x})}\right)'
-	= (cos{(x^{x})}{\cdot}((x^{x}){\cdot}(((\frac{\left(1\right)}{x}{\cdot}\left(1\right)){\cdot}x)+(ln{x}{\cdot}\left(1\right)))))\]
+	$\left(sin{(\15\{\cdot}(x^{\3\}))}\right)'$
+	$\left((cos{(\15\{\cdot}(x^{\3\}))}{\cdot}((\0\{\cdot}(x^{\3\}))+(\15\{\cdot}((x^{\3\}){\cdot}(((\frac{\1\}{x}{\cdot}\1\){\cdot}\3\)+(ln{x}{\cdot}\0\))))))$
+На уроке рисования вам докажут, что:
+	$\left((sin{(\15\{\cdot}(x^{\3\}))}+(cos{((\20\{\cdot}x)+\4\)}^{\3\}))\right)'$
+	$\left(((cos{(\15\{\cdot}(x^{\3\}))}{\cdot}((\0\{\cdot}(x^{\3\}))+(\15\{\cdot}((x^{\3\}){\cdot}(((\frac{\1\}{x}{\cdot}\1\){\cdot}\3\)+(ln{x}{\cdot}\0\))))))+((cos{((\20\{\cdot}x)+\4\)}^{\3\}){\cdot}(((\frac{\1\}{cos{((\20\{\cdot}x)+\4\)}}{\cdot}(sin{((\20\{\cdot}x)+\4\)}{\cdot}(((\0\{\cdot}x)+(\20\{\cdot}\1\))+\0\))){\cdot}\3\)+(ln{cos{((\20\{\cdot}x)+\4\)}}{\cdot}\0\))))$
 Упростив выражение получаем ответ:
-	\[\left(sin{(x^{x})}\right)'
-	= (cos{(x^{x})}{\cdot}((x^{x}){\cdot}((\frac{\left(1\right)}{x}{\cdot}x)+ln{x})))\]
+	$\left((sin{(\15\{\cdot}(x^{\3\}))}+(cos{((\20\{\cdot}x)+\4\)}^{\3\}))\right)'$
+	$\left(((cos{(\15\{\cdot}(x^{\3\}))}{\cdot}(\15\{\cdot}((x^{\3\}){\cdot}(\frac{\1\}{x}{\cdot}\3\))))+((cos{((\20\{\cdot}x)+\4\)}^{\3\}){\cdot}((\frac{\1\}{cos{((\20\{\cdot}x)+\4\)}}{\cdot}(sin{((\20\{\cdot}x)+\4\)}{\cdot}\20\)){\cdot}\3\)))$
 
 \end{document}
