--- a/Expression.tex
+++ b/Expression.tex
@@ -7,79 +7,79 @@
 
 \geometry{top=4ex}
 \geometry{bottom=4ex}
-\geometry{left=5em}
-\geometry{right=5em}
+\geometry{left=1em}
+\geometry{right=1em}
 
-\author{Муратов Артём}
-\date{3Б класс}
-\title{Домашняя работа}
-\maketitle
+\begin{document}
+	\author{Муратов Артём}
+	\date{3Б класс}
+	\title{Домашняя работа}
+	\maketitle
 
-№9(1) Вычислить:	$\left((sin{(\15\{\cdot}(x^{\3\}))}+(cos{((\20\{\cdot}x)+\4\)}^{\3\}))\right)'$
-\]
+	\footnotesize
 
-
+	№9(1) Вычислить:(\sin{({15}{\cdot}(x^{{2}}))}+(\cos{(({20}{\cdot}x)+{4})}^{{3}}))
 Решение:
 
 Пока примем без доказательства, что:
-	$\left(\3\\right)'$
-	$\left(\0\$
+	\[\left({3}\right)' = {0}\]
+
 Пока примем без доказательства, что:
-	$\left(\4\\right)'$
-	$\left(\0\$
+	\[\left({4}\right)' = {0}\]
+
 Очевидно,
-	$\left(x\right)'$
-	$\left(\1\$
+	\[\left(x\right)' = {1}\]
+
 Пока примем без доказательства, что:
-	$\left(\20\\right)'$
-	$\left(\0\$
+	\[\left({20}\right)' = {0}\]
+
 Заметим, что:
-	$\left((\20\{\cdot}x)\right)'$
-	$\left(((\0\{\cdot}x)+(\20\{\cdot}\1\))$
+	\[\left(({20}{\cdot}x)\right)' = (({0}{\cdot}x)+({20}{\cdot}{1}))\]
+
 На уроке рисования вам докажут, что:
-	$\left(((\20\{\cdot}x)+\4\)\right)'$
-	$\left((((\0\{\cdot}x)+(\20\{\cdot}\1\))+\0\)$
+	\[\left((({20}{\cdot}x)+{4})\right)' = ((({0}{\cdot}x)+({20}{\cdot}{1}))+{0})\]
+
 Перейдя в комплексное поле и обратно, получим
-	$\left(cos{((\20\{\cdot}x)+\4\)}\right)'$
-	$\left((sin{((\20\{\cdot}x)+\4\)}{\cdot}(((\0\{\cdot}x)+(\20\{\cdot}\1\))+\0\))$
+	\[\left(\cos{(({20}{\cdot}x)+{4})}\right)' = (\sin{(({20}{\cdot}x)+{4})}{\cdot}((({0}{\cdot}x)+({20}{\cdot}{1}))+{0}))\]
+
 В курсе аналитической геометрии вам доказывали, что:
-	$\left(ln{cos{((\20\{\cdot}x)+\4\)}}\right)'$
-	$\left((\frac{\1\}{cos{((\20\{\cdot}x)+\4\)}}{\cdot}(sin{((\20\{\cdot}x)+\4\)}{\cdot}(((\0\{\cdot}x)+(\20\{\cdot}\1\))+\0\)))$
+	\[\left(ln{\cos{(({20}{\cdot}x)+{4})}}\right)' = (\frac{{1}}{\cos{(({20}{\cdot}x)+{4})}}{\cdot}(\sin{(({20}{\cdot}x)+{4})}{\cdot}((({0}{\cdot}x)+({20}{\cdot}{1}))+{0})))\]
+
 Заметим, что:
-	$\left((ln{cos{((\20\{\cdot}x)+\4\)}}{\cdot}\3\)\right)'$
-	$\left((((\frac{\1\}{cos{((\20\{\cdot}x)+\4\)}}{\cdot}(sin{((\20\{\cdot}x)+\4\)}{\cdot}(((\0\{\cdot}x)+(\20\{\cdot}\1\))+\0\))){\cdot}\3\)+(ln{cos{((\20\{\cdot}x)+\4\)}}{\cdot}\0\))$
+	\[\left((ln{\cos{(({20}{\cdot}x)+{4})}}{\cdot}{3})\right)' = (((\frac{{1}}{\cos{(({20}{\cdot}x)+{4})}}{\cdot}(\sin{(({20}{\cdot}x)+{4})}{\cdot}((({0}{\cdot}x)+({20}{\cdot}{1}))+{0}))){\cdot}{3})+(ln{\cos{(({20}{\cdot}x)+{4})}}{\cdot}{0}))\]
+
 После простых преобразований:
-	$\left((cos{((\20\{\cdot}x)+\4\)}^{\3\})\right)'$
-	$\left(((cos{((\20\{\cdot}x)+\4\)}^{\3\}){\cdot}(((\frac{\1\}{cos{((\20\{\cdot}x)+\4\)}}{\cdot}(sin{((\20\{\cdot}x)+\4\)}{\cdot}(((\0\{\cdot}x)+(\20\{\cdot}\1\))+\0\))){\cdot}\3\)+(ln{cos{((\20\{\cdot}x)+\4\)}}{\cdot}\0\)))$
+	\[\left((\cos{(({20}{\cdot}x)+{4})}^{{3}})\right)' = ((\cos{(({20}{\cdot}x)+{4})}^{{3}}){\cdot}(((\frac{{1}}{\cos{(({20}{\cdot}x)+{4})}}{\cdot}(\sin{(({20}{\cdot}x)+{4})}{\cdot}((({0}{\cdot}x)+({20}{\cdot}{1}))+{0}))){\cdot}{3})+(ln{\cos{(({20}{\cdot}x)+{4})}}{\cdot}{0})))\]
+
 Пока примем без доказательства, что:
-	$\left(\3\\right)'$
-	$\left(\0\$
+	\[\left({2}\right)' = {0}\]
+
 Очевидно,
-	$\left(x\right)'$
-	$\left(\1\$
+	\[\left(x\right)' = {1}\]
+
 В курсе аналитической геометрии вам доказывали, что:
-	$\left(ln{x}\right)'$
-	$\left((\frac{\1\}{x}{\cdot}\1\)$
+	\[\left(ln{x}\right)' = (\frac{{1}}{x}{\cdot}{1})\]
+
 Заметим, что:
-	$\left((ln{x}{\cdot}\3\)\right)'$
-	$\left((((\frac{\1\}{x}{\cdot}\1\){\cdot}\3\)+(ln{x}{\cdot}\0\))$
+	\[\left((ln{x}{\cdot}{2})\right)' = (((\frac{{1}}{x}{\cdot}{1}){\cdot}{2})+(ln{x}{\cdot}{0}))\]
+
 После простых преобразований:
-	$\left((x^{\3\})\right)'$
-	$\left(((x^{\3\}){\cdot}(((\frac{\1\}{x}{\cdot}\1\){\cdot}\3\)+(ln{x}{\cdot}\0\)))$
+	\[\left((x^{{2}})\right)' = ((x^{{2}}){\cdot}(((\frac{{1}}{x}{\cdot}{1}){\cdot}{2})+(ln{x}{\cdot}{0})))\]
+
 Пока примем без доказательства, что:
-	$\left(\15\\right)'$
-	$\left(\0\$
+	\[\left({15}\right)' = {0}\]
+
 Заметим, что:
-	$\left((\15\{\cdot}(x^{\3\}))\right)'$
-	$\left(((\0\{\cdot}(x^{\3\}))+(\15\{\cdot}((x^{\3\}){\cdot}(((\frac{\1\}{x}{\cdot}\1\){\cdot}\3\)+(ln{x}{\cdot}\0\)))))$
+	\[\left(({15}{\cdot}(x^{{2}}))\right)' = (({0}{\cdot}(x^{{2}}))+({15}{\cdot}((x^{{2}}){\cdot}(((\frac{{1}}{x}{\cdot}{1}){\cdot}{2})+(ln{x}{\cdot}{0})))))\]
+
 Ещё более очевидно
-	$\left(sin{(\15\{\cdot}(x^{\3\}))}\right)'$
-	$\left((cos{(\15\{\cdot}(x^{\3\}))}{\cdot}((\0\{\cdot}(x^{\3\}))+(\15\{\cdot}((x^{\3\}){\cdot}(((\frac{\1\}{x}{\cdot}\1\){\cdot}\3\)+(ln{x}{\cdot}\0\))))))$
+	\[\left(\sin{({15}{\cdot}(x^{{2}}))}\right)' = (\cos{({15}{\cdot}(x^{{2}}))}{\cdot}(({0}{\cdot}(x^{{2}}))+({15}{\cdot}((x^{{2}}){\cdot}(((\frac{{1}}{x}{\cdot}{1}){\cdot}{2})+(ln{x}{\cdot}{0}))))))\]
+
 На уроке рисования вам докажут, что:
-	$\left((sin{(\15\{\cdot}(x^{\3\}))}+(cos{((\20\{\cdot}x)+\4\)}^{\3\}))\right)'$
-	$\left(((cos{(\15\{\cdot}(x^{\3\}))}{\cdot}((\0\{\cdot}(x^{\3\}))+(\15\{\cdot}((x^{\3\}){\cdot}(((\frac{\1\}{x}{\cdot}\1\){\cdot}\3\)+(ln{x}{\cdot}\0\))))))+((cos{((\20\{\cdot}x)+\4\)}^{\3\}){\cdot}(((\frac{\1\}{cos{((\20\{\cdot}x)+\4\)}}{\cdot}(sin{((\20\{\cdot}x)+\4\)}{\cdot}(((\0\{\cdot}x)+(\20\{\cdot}\1\))+\0\))){\cdot}\3\)+(ln{cos{((\20\{\cdot}x)+\4\)}}{\cdot}\0\))))$
+	\[\left((\sin{({15}{\cdot}(x^{{2}}))}+(\cos{(({20}{\cdot}x)+{4})}^{{3}}))\right)' = ((\cos{({15}{\cdot}(x^{{2}}))}{\cdot}(({0}{\cdot}(x^{{2}}))+({15}{\cdot}((x^{{2}}){\cdot}(((\frac{{1}}{x}{\cdot}{1}){\cdot}{2})+(ln{x}{\cdot}{0}))))))+((\cos{(({20}{\cdot}x)+{4})}^{{3}}){\cdot}(((\frac{{1}}{\cos{(({20}{\cdot}x)+{4})}}{\cdot}(\sin{(({20}{\cdot}x)+{4})}{\cdot}((({0}{\cdot}x)+({20}{\cdot}{1}))+{0}))){\cdot}{3})+(ln{\cos{(({20}{\cdot}x)+{4})}}{\cdot}{0}))))\]
+
 Упростив выражение получаем ответ:
-	$\left((sin{(\15\{\cdot}(x^{\3\}))}+(cos{((\20\{\cdot}x)+\4\)}^{\3\}))\right)'$
-	$\left(((cos{(\15\{\cdot}(x^{\3\}))}{\cdot}(\15\{\cdot}((x^{\3\}){\cdot}(\frac{\1\}{x}{\cdot}\3\))))+((cos{((\20\{\cdot}x)+\4\)}^{\3\}){\cdot}((\frac{\1\}{cos{((\20\{\cdot}x)+\4\)}}{\cdot}(sin{((\20\{\cdot}x)+\4\)}{\cdot}\20\)){\cdot}\3\)))$
+	\[\left((\sin{({15}{\cdot}(x^{{2}}))}+(\cos{(({20}{\cdot}x)+{4})}^{{3}}))\right)' =\]	\[= ((\cos{({15}{\cdot}(x^{{2}}))}{\cdot}({15}{\cdot}((x^{{2}}){\cdot}(\frac{{1}}{x}{\cdot}{2}))))+((\cos{(({20}{\cdot}x)+{4})}^{{3}}){\cdot}((\frac{{1}}{\cos{(({20}{\cdot}x)+{4})}}{\cdot}(\sin{(({20}{\cdot}x)+{4})}{\cdot}{20})){\cdot}{3})))\]
+
 
 \end{document}
